# freenet-net-graph

./: .gitignore  Cargo.toml  README.md
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: contract_client.rs  graph.rs  main.rs  settings.rs  ws_shim.rs
scraper/: Cargo.toml
scraper/src/: lib.rs
shared/: Cargo.toml
shared/src/: contract.rs  lib.rs
stdlib-0.6.1-patched/: .cargo_vcs_info.json  Cargo.toml
stdlib-0.6.1-patched/src/client_api/: browser.rs
topology-contract/: Cargo.toml  freenet.toml
topology-contract/examples/: initial_state.rs
topology-contract/src/: lib.rs
topology-publisher/: Cargo.toml  README.md  topology-publisher.service
topology-publisher/src/: health.rs  main.rs  probe.rs
