[workspace]
resolver = "2"
# `frontend` and `topology-contract` are excluded because they target
# `wasm32-unknown-unknown` and have their own toolchain settings; build
# them via `trunk build` (frontend) or `cargo build --target …`
# (contract). Everything in `members` is host-side.
members = ["scraper", "shared", "topology-publisher"]
exclude = ["frontend", "topology-contract"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
