[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_bytes = "0.11"
bincode = "1.3"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
rand = "0.8"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize", "rand_core"] }
