[package]
name = "topology-publisher"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "topology-publisher"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
# Native (non-wasm) client for the freenet client_api. Pulls in
# tokio-tungstenite and bincode so the daemon can talk WS to the
# local freenet node from a regular OS process.
freenet-stdlib = { version = "0.6.1", features = ["net"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize", "rand_core"] }
bincode = "1.3"
bs58 = "0.5"
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.8"
futures = "0.3"
url = "2"
# WebSocket client for connecting to the local freenet node. Match
# the version the published `freenet-stdlib = "0.6.1"` uses so the
# `WebApi::start(connection)` Connection type lines up.
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots", "url"] }
